# LoMo

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  cross_platform.md  mrd.md  mvp.md  mvp_phase2.md  prd.md  testBehavior.cpp
.github/workflows/: benchmark.yml
src/: build.bat  editor.c  editor.h  fileio.c  fx_app_main.c  logic.c  lomo_ui.c  main.c  parser.c  render.c
src/engine/: bench_runner.c  benchmark_final.txt  benchmark_ingest.c  benchmark_ingest.cpp  benchmark_report.txt  benchmark_results.txt  benchmark_size.txt  build_engine.bat  cmds.txt  dummy.c  dummy.cpp  engine_main.c  ingestor.c  ingestor.cpp  ingestor.h  lomo_os.h  merger.c  merger.cpp  merger.h  os_posix.c  os_posix.cpp  os_win.c  os_win.cpp  query_engine.c  query_engine.cpp  run_all_tests.bat  scanner_core.c  scanner_core.cpp  simd_filter.c  simd_filter.h  sql_parser.c  sql_parser.cpp  sql_parser.h  storage_engine.c  storage_engine.cpp  storage_engine.h  test_ingestion.c  test_merge.c  test_sql.c
src/ui/: document.c  editor.c  editor.h  types.h  ui_main.cpp  ui_render.cpp
